resources/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color:darkslategray;
    color: whitesmoke;
    font-family: 'Roboto Mono', monospace;
    font-size: 18px;
}

/* HEADER */
header{
    display: flex;
    justify-content: space-between;
    width: 100%;
    border-bottom: 1px solid whitesmoke;
    padding: 20px 5%;
}

.nav-bar li{
    display: inline-block;
    list-style: none;
    margin-left: 1rem;
    margin-right: 1rem;
}

a{
    text-decoration: none;
    color: whitesmoke;
    transition: background-color 50ms linear;
}

a:hover{
    background-color: rgb(39, 66, 66);
    border-bottom: 1px solid whitesmoke;
}

/* INTRO */
.intro--name{
    font-size: 3rem;
    font-weight: 500;
}

.intro--description{
    font-weight: normal;
}

/* MAIN */
main{
    max-width: 800px;
    margin: 0 auto;
    padding: 2rem;
}

/* CONTENT */
.content{
    padding-top: 3rem;
}

/* WEBSITE-LIST */
.website-list{
    margin-top: 3rem;
    padding: 1rem;
    transition: background-color 50ms linear;
}

.website-list:hover{
    background-color: rgb(39, 66, 66);
    border-bottom: 3px solid whitesmoke;
}

.website-list p{
    padding: 1rem;
}

